--- a/style.css
+++ b/style.css
@@ -16,6 +16,7 @@
 .books {
   display: flex;
   justify-content: space-between;
+  padding: 5px;
   align-items: center;
   height: 40px;
   background-color: #cccccc;
@@ -25,7 +26,7 @@
 }
 .books .remove-btn {
   margin-right: 10px;
-  border: 3px solid #000;
+  border: 2px solid #000;
   width: 70px;
   height: 30px;
 }
