--- a/style.css
+++ b/style.css
@@ -4,6 +4,32 @@
   box-sizing: border-box;
 }
 
+/* navbar */
+
+.navbar {
+  display: flex;
+  flex-direction: row;
+  justify-content: space-between;
+  border: 2px solid black;
+  padding: 10px;
+  font-weight: bold;
+  font-size: 18px;
+}
+
+.menu-list {
+  display: flex;
+  flex-direction: row;
+  gap: 15px;
+  list-style: none;
+}
+
+a {
+  text-decoration: none;
+  color: black;
+}
+
+/* navbar closed */
+
 #all {
   text-align: center;
   margin-top: 20px;
@@ -65,3 +91,25 @@
   height: 30px;
   border: 3px solid #000;
 }
+
+/* contact us section */
+
+#contact-us {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  gap: 40px;
+  padding: 100px;
+}
+
+.contact-info {
+  display: flex;
+  flex-direction: column;
+  gap: 10px;
+}
+
+.contact-details {
+  margin-left: 30px;
+}
+
+/* contact us section closed */
